Implement CrostiniRemover without using RestartCrostini

Bug: 866752
Change-Id: I34056730480bb7ad52b01f6ec045ee936b5f016b
Reviewed-on: https://chromium-review.googlesource.com/1151041
Reviewed-by: Renée Wright <rjwright@chromium.org>
Commit-Queue: Nicholas Verne <nverne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578504}